fixed text aligning

--- a/Custom.CSS
+++ b/Custom.CSS
@@ -187,8 +187,8 @@ input[type="submit"]:hover {
     display: inline-flex;         /* Maak de container breedte afhankelijk van de inhoud */
     max-width: 90%;                 /* Max breedte, zodat het goed past op mobiele apparaten */
     box-sizing: border-box;         /* Zorgt ervoor dat padding wordt meegerekend in de breedte */
-    min-height: 35px;   
-    height: 35px;
+    min-height: 40px;   
+    height: 40px;
 }
 
 
